Add support for Ubuntu 16.04
This is untested because Samba seems to be broken. All the bits that were
broken for Ubuntu 16.04 (because of the version of Chef I used to
develop this cookbook in the first place) have been fixed, and alleged
fixes for the Samba brokeness have been added.

--- a/templates/default/smb.conf.erb
+++ b/templates/default/smb.conf.erb
@@ -5,9 +5,11 @@
 <%- @globals.each do |k,v| %>
   <%= k.gsub('_', ' ') %> = <%= v %>
 <%- end %>
-<%- @idmap.each do |wg,config| %>
-  <%- config.each do |k,v| %>
-  idmap config <%= wg %> : <%= k %> = <%= v %>
+<%- if @globals['server_role'] != 'dc' %>
+  <%- @idmap.each do |wg,config| %>
+    <%- config.each do |k,v| %>
+    idmap config <%= wg %> : <%= k %> = <%= v %>
+    <%- end %>
   <%- end %>
 <%- end %>
 
